# folderTree

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
docs/examples/: README.md
src/folderTree/: __main__.py  config.py
src/folderTree/analyzers/: languages.py  statistics.py
src/folderTree/cli/: main.py  parser.py
src/folderTree/exporters/: markdown.py  txt.py
src/folderTree/generators/: documentation.py  tree.py
src/folderTree/models/: __init__.py  file.py  folder.py  metadata.py  project.py
src/folderTree/scanner/: ignore.py  metadata_collector.py  scanner.py
src/folderTree/utils/: constants.py  formatter.py  helpers.py
tests/: test_cli.py  test_cli_parser.py  test_documentation.py  test_ignore.py  test_languages.py  test_markdown_exporter.py  test_scanner.py  test_statistics.py  test_tree.py  test_txt_exporter.py
